fix: changed the footer color scheme to add contrast to the booking-form section

--- a/css/index.css
+++ b/css/index.css
@@ -495,7 +495,7 @@ footer *{
         width: max-content !important;
         margin-right: 80px;
         color: #eee !important;
-        margin-bottom: 20px
+        margin-bottom: 20px;
     } 
     
     #copyright{
